# kiln-watch

./: .gitignore  LICENSE  Makefile  README.md  config.json  kiln-watch.yaml  pyproject.toml  udp_listen.py
kiln-watch-sensor/: Makefile  README.md  boot.py  max31856.py  networking.py
kiln-watch-service/: Makefile  web_app.py
kiln-watch-service/site/: Legend.js  Makefile  RampChart.js  TemperatureChart.js  index.html
kiln_watch_service/: Main.py  Observations.py  Record.py  Service.py
kiln_watch_service/static/: main.css
kiln_watch_service/templates/: index.html
kiln_watch_service2/: Makefile  Observations.py  Record.py  boot.py  config.json  networking.py
kiln_watch_service2/site/: Common.js
